--- a/paper/all.bib
+++ b/paper/all.bib
@@ -1079,3 +1079,40 @@ url="http://dx.doi.org/10.1007/3-540-56596-5_47"
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@inproceedings{BSS+06,
+ author = {Billings, John and Sewell, Peter and Shinwell, Mark and Strni\v{s}a, Rok},
+ title = {{Type-safe Distributed Programming for OCaml}},
+ booktitle = {Proceedings of the 2006 Workshop on ML},
+ series = {ML '06},
+ year = {2006},
+ isbn = {1-59593-483-9},
+ location = {Portland, Oregon, USA},
+ pages = {20--31},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1159876.1159881},
+ doi = {10.1145/1159876.1159881},
+ acmid = {1159881},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {HashCaml, objective Caml, type-safe marshalling},
+} 
+
+@inproceedings{SLW+05,
+ author = {Sewell, Peter and Leifer, James J. and Wansbrough, Keith and Nardelli, Francesco Zappa and Allen-Williams, Mair and Habouzit, Pierre and Vafeiadis, Viktor},
+ title = {{Acute: High-level Programming Language Design for Distributed Computation}},
+ booktitle = {Proceedings of the Tenth ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '05},
+ year = {2005},
+ isbn = {1-59593-064-7},
+ location = {Tallinn, Estonia},
+ pages = {15--26},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1086365.1086370},
+ doi = {10.1145/1086365.1086370},
+ acmid = {1086370},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {ML, abstract types, distributed programming, marshalling, modules, programming languages, rebinding, serialisation, type theory, version control},
+} 
+
