--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -117,7 +117,7 @@ The functions are described below.
 		\C{D} edit must delete the second element from $v_2$, if it were to
 		have the same effect as it did on $v$. We say \C{D(1)} in $s_1$ has to be
 		transformed w.r.t the sequence $s_2 = \C{[I(c,0);S(3,c,s)]}$.  The function
-		\C{op\_transform} (Fig.~\ref{fig:mlist-sig}) computes such
+		\C{op\_transform} (shown in the Appendix) computes such
 		\emph{operational transformations} for an edit sequence $s_1$ w.r.t another
 		edit sequence $s_2$. A notable transformation rule is for a substitution
 		w.r.t another substitution at the same position. Since the substituting
@@ -139,17 +139,17 @@ of them (say, $s_1$) w.r.t $s_2$ to obtain $s_1'$, and finally applies
 A mergeable list of integers can be composed using mergeable lists and
 mergeable integers.  Concretely, it is a composition of \C{MList} and
 \C{Int} types (i.e., \C{MList(Int)}), where \C{Int.merge} is the same
-as \C{Counter.merge} (Sec.~\ref{sec:intro}).  An alternative
+as \C{Counter.merge} described in the introduction.  An alternative
 instantiation of \C{MList} is for a quantity type
-(\C{Qty}) that supports \C{add} and \C{subtract} operations, but
-\begin{wrapfigure}{L}{.45\textwidth}
+(\C{Qty}) that supports \C{add} and \C{subtract} operations, and
+defines its \C{merge} operation a little differently:
+\begin{wrapfigure}{l}{.45\textwidth}
   \centering
   \includegraphics[scale=0.4]{Figures/list-eg}
   \caption{Lists of mergeable values are mergeable. }
   \label{fig:list-eg}
-  \vspace*{-.2in}
+  \vspace*{-.45in}
 \end{wrapfigure}
-defines its \C{merge} operation a little differently:
 \begin{ocaml}
 let merge lca v1 v2 = if v1 = lca then v2
     else (if v2 = lca then v1 else max v1 v2)
@@ -178,6 +178,47 @@ composing \C{MList(Int)} with \C{MRope} (i.e., \C{MRope(MList(Int))}).
 
 \subsection{Shopping List}
 
+
+A non-trivial demonstration illustrating the compositional power of
+mergeable types is a shopping list application that allows its users
+to collaboratively build a shopping list (listing items in the
+decreasing order of their priority), by adding new items with a
+specified quantity, deleting existing items, and increasing or
+decreasing their quantity. An item (\C{Item.t}) is represented as a
+tuple of its name (a string) and the quantity (A \C{Qty.t}).  The
+merge function for \C{Item.t} merges the quantities of items (using
+\C{Qty.merge}) having the same names. Items with different names are
+considered distinct. A shopping list is a mergeable list of items,
+\begin{wrapfigure}{l}{.5\textwidth}
+  \centering
+  \includegraphics[scale=0.3]{Figures/shopping-list}
+  \caption{Merging concurrent shopping lists}
+  \label{fig:shopping-list}
+  \vspace*{-.35in}
+\end{wrapfigure}
+i.e., \C{MList(Item)} (a grocery shopping list may not be large enough
+to justify using ropes, but \C{MRope(MList(Item))} is certainly
+allowed).  \C{MList(Item).merge} automatically lifts the merge
+semantics for items to a merge semantics for lists of items.
+Fig.~\ref{fig:shopping-list} illustrates its behavior.  Here, two
+users, Alice and Bob, concurrently edit a shopping list whose initial
+contents are \C{milk} and \C{eggs}. While both simultaneously update
+the quantity of eggs, Bob also removes \C{milk} and inserts \C{candy}.
+Fig.~\ref{fig:shopping-list-code} shows the \name code for two
+concurrent sessions. The merged shopping list contains \C{eggs} and
+\C{candy}, where the quantity of eggs is obtained by merging Alice's
+and Bob's quantity as per the definition of \C{Qty.merge}.
+The examples described above make certain assumptions about the
+concurrency model and the underlying system, such as the existence of
+a single least common ancestor (LCA) for any pair of versions, the
+ability to access a previous version on any branch, and mergeability
+of any two concurrent versions. Enforcing these guarantees in a fully
+decentralized distributed setting requires addressing non-trivial
+theoretical challenges. These, and other details that contribute to
+the practicality of our model, such as containing the complexity of
+merges, are discussed in subsequent sections.
+
+
 \begin{figure}
 \centering
 \begin{tabular}{l||l}
@@ -204,45 +245,3 @@ let bob_f : L.t unit t =
 \caption{Bob and Alice collaboratively build a grocery shopping list}
 \label{fig:shopping-list-code}
 \end{figure}
-
-A non-trivial demonstration illustrating the compositional power of
-mergeable types is shopping list application, that allows its users to
-collaboratively build a shopping list (listing items in the decreasing
-order of their priority), by adding new items with a
-specified quantity, deleting existing items, and increasing or
-\begin{wrapfigure}{L}{.5\textwidth}
-  \centering
-  \includegraphics[scale=0.3]{Figures/shopping-list}
-  \caption{Merging concurrent shopping lists}
-  \label{fig:shopping-list}
-  \vspace*{-.2in}
-\end{wrapfigure}
-decreasing their quantity. An item (\C{Item.t}) is represented as a
-tuple of its name (a string) and the quantity (A \C{Qty.t}). The merge
-function for \C{Item.t} merges the quantities of items (using
-\C{Qty.merge}) having the same names. Items with different names are
-considered distinct. A shopping list is a mergeable list of items,
-i.e., \C{MList(Item)} (a grocery shopping list may not be large enough
-to justify using ropes, but \C{MRope(MList(Item))} is definitely a
-possibility).  \C{MList(Item).merge} automatically lifts the merge
-semantics for items to a merge semantics for lists of items.
-Fig.~\ref{fig:shopping-list} illustrates its behavior.  Here, two
-users, Alice and Bob, concurrently edit a shopping list whose initial
-contents are \C{milk} and \C{eggs}. While both simultaneously update
-the quantity of eggs, Bob also removes \C{milk} and inserts \C{candy}.
-Fig.~\ref{fig:shopping-list-code} shows the \name code for two
-concurrent sessions. The merged shopping list contains \C{eggs} and
-\C{candy}, where the quantity of eggs is obtained by merging Alice's
-and Bob's quantity as per the definition of \C{Qty.merge}.
-
-The examples described above make certain assumptions about the
-concurrency model and the underlying system, such as the existence of
-a single least common ancestor (LCA) for any pair of versions, the
-ability to access a previous version on any branch, and mergeability
-of any two concurrent versions. Enforcing these guarantees in a fully
-decentralized distributed setting requires addressing non-trivial
-theoretical challenges. These, and other details that contribute to
-the practicality of our model, such as containing the complexity of
-merges, are discussed in subsequent sections.
-
-
