--- a/paper/model.tex
+++ b/paper/model.tex
@@ -30,6 +30,13 @@ application. \drawsome represents a free-hand drawing canvas in terms
 of a tree of quadrants.  Each quadrant is simply a leaf node
 containing a single pixel (\C{r},\C{g}, or \C{b}) or a tree, if the
 quadrant contains multiple pixels of different colors. Quadrants are
+\begin{wrapfigure}{l}{.4\textwidth}
+\centering
+\includegraphics[scale=0.43]{Figures/canvas-merging}
+\caption{Merging concurrent versions (\C{v1} and \C{v2}) of a drawing
+canvas. \C{lca} is their common ancestor.}
+\label{fig:canvas-merging}
+\end{wrapfigure}
 expanded into a tree structures as and when pixels are colored.  The
 representation is thus optimized for sparse canvases, such as
 whiteboards. The application supports three simple operations:
@@ -63,13 +70,6 @@ versions of a drawing canvas (see Fig.~\ref{fig:merge-canvas}) that
 includes includes two concurrent versions (\C{v1} and \C{v2}),
 and their least common ancestor (\C{lca}) - the version from which the
 two concurrent versions evolved independently. The merge function can
-\begin{wrapfigure}{L}{.4\textwidth}
-\centering
-\includegraphics[scale=0.43]{Figures/canvas-merging}
-\caption{Merging concurrent versions (\C{v1} and \C{v2}) of a drawing
-canvas. \C{lca} is their common ancestor.}
-\label{fig:canvas-merging}
-\end{wrapfigure}
 make use of the pixel values of the common ancestor to merge the pixel
 values on both the canvases. For instance, if the color of a pixel in
 \C{v1} is white, and in \C{v2} it is green, and its color in \C{lca}
