--- a/paper/mergeable-types.tex
+++ b/paper/mergeable-types.tex
@@ -38,7 +38,7 @@ another object $D:t$ such that the relationship between the semantic
 successors and $D$ satisfies certain conditions. These conditions can
 be understood by observing the \rulelabel{E-Pull-Wait} rule of
 Fig.~\ref{fig:opsem}, which applies the \C{merge} function to a pair
-of concurrent versions ($v_1$ and $v_2$) and their least common
+of concurrent versions ($v_1$ and $v_2$) and their lowest common
 ancestor ($v$). Thus, the only relationship that exists between $v$
 and $v_1$, and $v$ and $v_2$ is the syntactic ancestor relationship
 that follows from the computation's branching structure. The merge
